puppet example now runnable